syntax = "proto3";

import "google/protobuf/duration.proto";

option go_package = "sensor_simulator/proto/simulator";

package simulator;

enum PrngType {
    PRNG_TYPE_UNKNOWN = 0;
    PRNG_TYPE_PCG = 1;
    PRNG_TYPE_XOSHIRO = 2;
}

message Prng {
    PrngType type = 1;
    int64 seed = 2;
}

enum BaseType {
    BASE_TYPE_UNKNOWN = 0;
    BASE_TYPE_BEZIER = 1;
    BASE_TYPE_CONSTANT = 2;
    BASE_TYPE_LINEAR = 3;
    BASE_TYPE_SINEWAVE = 4;
}

message Base {
    BaseType type = 1;
    oneof type_data { 
        ConstantBase constant = 2;
        CommonBase common = 3;
    }
}

message ConstantBase {
    double value = 1;
}

message CommonBase {
    Prng generator = 1;
    double min_value = 2;
    double max_value = 3;
    google.protobuf.Duration min_period = 4;
    google.protobuf.Duration max_period = 5;
}

enum ModifierType {
    MODIFIER_TYPE_UNKNOWN = 0;
    MODIFIER_TYPE_CONSTANT_OFFSET = 1;
    MODIFIER_TYPE_HYSTERESIS = 2;
    MODIFIER_TYPE_INERTIA = 3;
    MODIFIER_TYPE_NONLINEAR_DEPENDENCE = 4;
    MODIFIER_TYPE_PROGRESSING_OFFSET = 5;
    MODIFIER_TYPE_QUANTIZATION = 6;
    MODIFIER_TYPE_RANDOM_ADD_DASH = 7;
    MODIFIER_TYPE_RANDOM_FIXED_DASH = 8;
    MODIFIER_TYPE_WHITE_NOISE = 9;
}

message Modifier {
    ModifierType type = 1;
    oneof type_data {
        ConstantOffsetModifier const_offset = 2;
        HysteresisModifier hysteresis = 3;
        InertitaModifier inertia = 4;
        NonLinearDependenceModifier non_linear_dependance = 5;
        ProgressingOffsetModifier progressing_offset = 6;
        QuantizationModifier quantization = 7;
        RandomAddDashModifier random_add_dash = 8;
        RandomFixedDashModifier random_fixed_dash = 9;
        WhiteNoiseModifier white_noise = 10;
    }
}

message ConstantOffsetModifier {
    double offset = 1;
}

message HysteresisModifier {
    uint32 percentage = 1;
}

message InertitaModifier {
    double value = 1;
    double period = 2;
}

message NonLinearDependenceModifier {
    double coefficient = 1;
    double center = 2;
}

message ProgressingOffsetModifier {
    double value = 1;
    google.protobuf.Duration interval = 2;
}

message QuantizationModifier {
    double quant = 1;
}

message RandomAddDashModifier {
    Prng generator = 1;
    double min_add_value = 2;
    double max_add_value = 3;
    google.protobuf.Duration min_dash_duration = 4;
    google.protobuf.Duration max_dash_duration = 5;
    google.protobuf.Duration avg_period = 6;
}

message RandomFixedDashModifier {
    Prng generator = 1;
    double value = 2;
    google.protobuf.Duration min_dash_duration = 3;
    google.protobuf.Duration max_dash_duration = 4;
    google.protobuf.Duration avg_period = 5;
}

message WhiteNoiseModifier {
    Prng generator = 1;
    double max_value = 2;
}

message Simulator {
    string name = 1;
    Base base = 2;
    repeated Modifier modifiers = 3;
}

service SensorSimulatorService {
  rpc AddSensor(AddSensorRequest) returns (AddSensorResponse);
//   rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
//   rpc SetFromConfig(SetFromConfigRequest) returns (SetFromConfigResponse);
//   rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message AddSensorRequest {
    Simulator simulator = 1;
}

message AddSensorResponse {
    
}

// message GetConfigRequest {
// }

// message GetConfigResponse {
//     Simulator simulator = 1;
// }

